mise à jour du design en responsive

--- a/projects/index.html
+++ b/projects/index.html
@@ -16,7 +16,7 @@ tagline : Projects
                {{ post.excerpt }}
                 <p>
                     <a href="{{ post.url }}" class="btn">
-                        Read the article
+                        Voir le projet &nbsp;&nbsp;<i class="icon-chevron-sign-right"></i>
                     </a>
                 </p>
             </div>
