Ajout d'image dans la tagline. Amélioration design

--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 ---
-layout: default
-title: Your New Jekyll Site
-tagline: Pierre Baron, Ingénieur web & mobile.
+layout  : default
+title   : Your New Jekyll Site
+tagline : Pierre Baron, Ingénieur web & mobile.
+image   : index
 ---
 <p>
 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam scelerisque volutpat massa, sit amet vulputate mauris iaculis id. Donec imperdiet placerat mattis. Etiam diam ipsum, elementum sed varius ut, porttitor sed tortor. Donec ut lobortis ligula. Curabitur fringilla tellus sit amet turpis luctus fringilla. Vivamus tincidunt, purus sit amet interdum vestibulum, lacus enim tempor velit, quis pellentesque erat tellus nec ipsum. Morbi in massa vitae turpis tempus adipiscing at non ante. Suspendisse vitae lectus sem. Aenean risus massa, tincidunt sit amet ultricies at, sodales consectetur nisl.
