--- a/works/index.html
+++ b/works/index.html
@@ -1,7 +1,8 @@
 ---
 layout  : default
 title   : Your New Jekyll Site
-tagline : Projects
+tagline : Projets
+image   : work
 ---
 
 <ul class="projects">
