--- a/works/index.html
+++ b/works/index.html
@@ -2,11 +2,11 @@
 layout  : default
 title   : Your New Jekyll Site
 tagline : Projets
-image   : work
+image   : works
 ---
 
 <ul class="projects">
-{% for post in site.categories.work %}
+{% for post in site.categories.works %}
     <li class="project">
         <h2>{{ post.tagline }}</h2>
         <div class="thumbnail">
