Maj design background image

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout  : default
-title   : Your New Jekyll Site
+title   : Ingénieur web & mobile
 tagline : Pierre Baron, Ingénieur web & mobile.
 image   : index
 ---
