maj du 18 aout 2013
maj layout
maj design

--- a/index.html
+++ b/index.html
@@ -4,18 +4,41 @@ title   : Ingénieur web & mobile
 tagline : Pierre Baron, Ingénieur web & mobile.
 image   : index
 ---
-<p>
-Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam scelerisque volutpat massa, sit amet vulputate mauris iaculis id. Donec imperdiet placerat mattis. Etiam diam ipsum, elementum sed varius ut, porttitor sed tortor. Donec ut lobortis ligula. Curabitur fringilla tellus sit amet turpis luctus fringilla. Vivamus tincidunt, purus sit amet interdum vestibulum, lacus enim tempor velit, quis pellentesque erat tellus nec ipsum. Morbi in massa vitae turpis tempus adipiscing at non ante. Suspendisse vitae lectus sem. Aenean risus massa, tincidunt sit amet ultricies at, sodales consectetur nisl.
-</p>
-<p>
-Suspendisse dapibus metus id lacus scelerisque bibendum. Mauris eu laoreet erat. Nam suscipit fringilla metus ut fringilla. Donec at leo vel diam iaculis auctor. Morbi sagittis ullamcorper tellus, in aliquet eros aliquet ut. Sed sed risus nec diam egestas semper vitae vitae nibh. In hac habitasse platea dictumst. Aenean eget augue purus, ut placerat turpis. Vivamus et justo quis justo ultricies dapibus a a enim.
-</p>
-<p>
-Pellentesque sagittis, diam nec faucibus porttitor, odio odio laoreet mauris, sit amet porta velit eros et felis. Ut hendrerit enim sit amet urna porta tristique. Fusce quis arcu sit amet justo egestas vehicula. Aliquam id arcu vel turpis porttitor euismod. Vivamus tincidunt arcu non ipsum pharetra porta. Quisque euismod elementum lacus, id posuere odio sodales mattis. Phasellus dapibus dolor ac urna mattis volutpat. Integer ac enim risus.
-</p>
-<p>
-Sed ultrices nisl vel felis imperdiet mollis. Aenean auctor, massa ac dictum bibendum, orci justo suscipit felis, id blandit diam justo vel magna. Fusce consectetur faucibus turpis, eu egestas leo ornare ac. Morbi at egestas urna. In eu nibh et nisl viverra malesuada eu at purus. Fusce ornare, eros in convallis tempor, sem diam malesuada quam, eget lobortis mauris nunc non orci. Nullam nec urna nisl. Donec vitae hendrerit metus. Suspendisse massa erat, convallis et sodales elementum, aliquam at dui. Aenean imperdiet vehicula ipsum quis volutpat. In fermentum varius risus, nec condimentum augue eleifend vitae.
-</p>
-<p>
-Maecenas feugiat nunc eu lacus feugiat venenatis. Nam blandit ante semper turpis tristique fermentum. Ut erat est, egestas a viverra eu, ullamcorper a lectus. Praesent in mollis lorem. Etiam eget mi sem. Suspendisse potenti. Donec a massa quis lorem tempor sagittis ac eget nulla. Maecenas at metus justo, ut luctus orci. Aliquam accumsan egestas urna, vitae volutpat urna dapibus nec. Donec ac vehicula ligula. Ut eu leo metus. Sed quis tincidunt dolor. Donec quis enim nulla, nec hendrerit velit. Nam elit risus, ultricies quis hendrerit ac, semper non justo. Nunc dui ipsum, cursus at malesuada eget, feugiat non libero. Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-</p>
+<section>
+    <div class="grid6">
+        <img src="" alt="Pierre Baron" />
+    </div>
+    <div class="grid6">
+        <p>Bonjour, je m'appelle Pierre Baron et je suis ingénieur informaticien spécialisé en domotique et services à l'habitat.</p>
+        <p>Mes compétences principales sont le devéloppement d'applications web et mobiles, les réseaux ainsi que l'automatisme.</p>
+    </div>
+</section>
+<section class="home-back-end">
+    <div class="grid6">
+        <h2>Développement Back End</h2>
+        <p>leflfleflef elefml eflze fzef kzef</p>
+    </div>
+    <div class="grid6 home-icon">
+        <i class="icon-cogs icon-4x"></i>
+    </div>
+</section>
+<section class="home-front-end">
+    <div class="grid6 home-icon">
+        <i class="icon-desktop icon-4x"></i>
+    </div>
+    <div class="grid6">
+        <h2>Développement Front End</h2>
+        <p>A mon sens, il est aussi important d'avoir une application fonctionelle que belle et ergonomique. L'interface et les interactions homme-machine, sont les éléments qui permettront à vos clients de juger et d'apprécier votre application.</p>
+    </div>
+</section>
+
+<section class="home-mobile">
+    <div class="grid6">
+        <h2>Développement mobile</h2>
+        <p>leflfleflef elefml eflze fzef kzef</p>
+    </div>
+    <div class="grid6 home-icon">
+        <i class="icon-mobile-phone icon-4x"></i>
+    </div>
+    
+</section>
