modification style et contenu page d'accueil

--- a/index.html
+++ b/index.html
@@ -5,40 +5,39 @@ tagline : Pierre Baron, Ingénieur web & mobile.
 image   : index
 ---
 <section>
-    <div class="grid6">
+    <h2>A propos de moi</h2>
+    <div class="grid3">
         <img src="" alt="Pierre Baron" />
     </div>
-    <div class="grid6">
+    <div class="grid9">
         <p>Bonjour, je m'appelle Pierre Baron et je suis ingénieur informaticien spécialisé en domotique et services à l'habitat.</p>
         <p>Mes compétences principales sont le devéloppement d'applications web et mobiles, les réseaux ainsi que l'automatisme.</p>
     </div>
 </section>
-<section class="home-back-end">
-    <div class="grid6">
-        <h2>Développement Back End</h2>
-        <p>leflfleflef elefml eflze fzef kzef</p>
-    </div>
-    <div class="grid6 home-icon">
-        <i class="icon-cogs icon-4x"></i>
-    </div>
-</section>
-<section class="home-front-end">
-    <div class="grid6 home-icon">
-        <i class="icon-desktop icon-4x"></i>
-    </div>
-    <div class="grid6">
-        <h2>Développement Front End</h2>
-        <p>A mon sens, il est aussi important d'avoir une application fonctionelle que belle et ergonomique. L'interface et les interactions homme-machine, sont les éléments qui permettront à vos clients de juger et d'apprécier votre application.</p>
+
+<section>
+    <h2>Compétences</h2>
+    <ul class="skills">
+        <li class="skill">
+            <h3><i class="icon-cogs"></i> Développement back end</h3>
+            <p>Une bonne application se doit d'être mûrement réfléchie et de posséder une base solide.</p>
+            <p><strong>Outils maîtrisés : </strong><br/> PHP, Java, MySQL, MongoDB.</p>
+        </li>
+         <li class="skill">
+            <h3><i class="icon-desktop"></i> Développement front end</h3>
+            <p>A mon sens, il est aussi important d'avoir une application fonctionelle que belle et ergonomique. L'interface et les interactions homme-machine, sont les éléments qui permettront à vos clients de juger et d'apprécier votre application.</p>
+            <p><strong>Outils maîtrisés : </strong><br/> HTML5, CSS3, JavaScript.</p>
+        </li> 
+         <li class="skill">
+            <h3><i class="icon-mobile-phone"></i> Développement mobile</h3>
+            <p>Les applications mobile web ou native sont une part intégrante du web actuel. Il est donc nécessaire de pouvoir proposer à vos clients une application intuitive et adaptée aux plus grand nombre d'appareils. </p>
+             <p><strong>Outils maîtrisés : </strong><br/> HTML5, CSS3, Objective-C, Android
+        </li> 
+         <li class="skill">
+            <h3><i class="icon-dashboard"></i> Gestion de projet</h3>
+            <p>Pour qu'un projet soit réussi, il doit être le plus ordonné possible. Il est donc important pour un bon ingénieur de maîtriser les bonnes techniques et les outils permettant d'attribuer au mieux les tâches tout au long du projet et de pouvoir le suivre du début à la fin.</p>
+             <p><strong>Outils maîtrisés : </strong><br/> Git, Mercurial, SCRUM, Kanban, Gantt, pair coding</p>
+        </li> 
     </div>
 </section>
 
-<section class="home-mobile">
-    <div class="grid6">
-        <h2>Développement mobile</h2>
-        <p>leflfleflef elefml eflze fzef kzef</p>
-    </div>
-    <div class="grid6 home-icon">
-        <i class="icon-mobile-phone icon-4x"></i>
-    </div>
-    
-</section>
