--- a/index.html
+++ b/index.html
@@ -20,21 +20,33 @@ image   : index
     <ul class="skills">
         <li class="skill">
             <h3><i class="icon-cogs"></i> Développement back end</h3>
+            <div class="image">
+                <div class="image-wrapper"><img src="/img/7.png" /></div>
+            </div>
             <p>Une bonne application se doit d'être mûrement réfléchie et de posséder une base solide.</p>
             <p><strong>Outils maîtrisés : </strong><br/> PHP, Java, MySQL, MongoDB.</p>
         </li>
          <li class="skill">
             <h3><i class="icon-desktop"></i> Développement front end</h3>
+            <div class="image">
+                <div class="image-wrapper"><img src="/img/13.png" /></div>
+            </div>
             <p>A mon sens, il est aussi important d'avoir une application fonctionelle que belle et ergonomique. L'interface et les interactions homme-machine, sont les éléments qui permettront à vos clients de juger et d'apprécier votre application.</p>
             <p><strong>Outils maîtrisés : </strong><br/> HTML5, CSS3, JavaScript.</p>
         </li> 
          <li class="skill">
             <h3><i class="icon-mobile-phone"></i> Développement mobile</h3>
+            <div class="image">
+                <div class="image-wrapper"><img src="/img/14.png" /></div>
+            </div>
             <p>Les applications mobile web ou native sont une part intégrante du web actuel. Il est donc nécessaire de pouvoir proposer à vos clients une application intuitive et adaptée aux plus grand nombre d'appareils. </p>
              <p><strong>Outils maîtrisés : </strong><br/> HTML5, CSS3, Objective-C, Android
         </li> 
          <li class="skill">
             <h3><i class="icon-dashboard"></i> Gestion de projet</h3>
+            <div class="image">
+                <div class="image-wrapper"><img src="/img/4.png" /></div>
+            </div>
             <p>Pour qu'un projet soit réussi, il doit être le plus ordonné possible. Il est donc important pour un bon ingénieur de maîtriser les bonnes techniques et les outils permettant d'attribuer au mieux les tâches tout au long du projet et de pouvoir le suivre du début à la fin.</p>
              <p><strong>Outils maîtrisés : </strong><br/> Git, Mercurial, SCRUM, Kanban, Gantt, pair coding</p>
         </li> 
