maj style. corrections typos. ajout keywords

--- a/index.html
+++ b/index.html
@@ -1,17 +1,14 @@
 ---
-layout  : default
-title   : Ingénieur web & mobile
-tagline : Pierre Baron, Ingénieur web & mobile.
-image   : index
+layout   : default
+title    : Ingénieur web & mobile
+tagline  : Pierre Baron, Ingénieur web & mobile.
+keywords : Pierre Baron, Web developer, Mobile Developer, Java, PHP, jQuery, CakePHP, jQuery
 ---
 <section>
     <h2>A propos de moi</h2>
-    <div class="grid3">
-        <img src="" alt="Pierre Baron" />
-    </div>
-    <div class="grid9">
-        <p>Bonjour, je m'appelle Pierre Baron et je suis ingénieur informaticien spécialisé en domotique et services à l'habitat.</p>
-        <p>Mes compétences principales sont le devéloppement d'applications web et mobiles, les réseaux ainsi que l'automatisme.</p>
+    <div class="grid12">
+         <p>Bonjour, je m'appelle Pierre Baron et je suis ingénieur informaticien spécialisé en domotique et services à l'habitat. Je travaille actuellement en tant que développeur web pour <a href="http://www.alyacom.fr/">AlyaCom</a>.</p>
+         <p>Après avoir réalisé un IUT en Génie Electrique et Informatique Industrielle, j'ai décidé de m'orienter vers une école d'ingénieur spécialisée en informatique, l'<a href="https://esir.univ-rennes1.fr/">ESIR</a>. J'ai choisi l'option domotique et services à l'habitiat car elle me permettrait de travailler sur divers systèmes et met en oeuvres un panel de compétences plutôt large, allant de la programmation objet, l'automatisme, les réseaux ou la sécurité.</p>
     </div>
 </section>
 
@@ -23,7 +20,7 @@ image   : index
             <div class="image">
                 <div class="image-wrapper"><img src="/img/7.png" /></div>
             </div>
-            <p>Une bonne application se doit d'être mûrement réfléchie et de posséder une base solide.</p>
+            <p>Une bonne application se doit d'être mûrement réfléchie et de posséder une base solide. Cela lui permettra de devenir évolutive et de s'adapter aux besoins de vos clients.</p>
             <p><strong>Outils maîtrisés : </strong><br/> PHP, Java, MySQL, MongoDB.</p>
         </li>
          <li class="skill">
@@ -39,7 +36,7 @@ image   : index
             <div class="image">
                 <div class="image-wrapper"><img src="/img/14.png" /></div>
             </div>
-            <p>Les applications mobile web ou native sont une part intégrante du web actuel. Il est donc nécessaire de pouvoir proposer à vos clients une application intuitive et adaptée aux plus grand nombre d'appareils. </p>
+            <p>Les applications mobiles webs ou natives sont une part intégrante du web actuel. Il est ainsi nécessaire de pouvoir proposer à vos clients une application intuitive et adaptée aux plus grand nombre d'appareils. </p>
              <p><strong>Outils maîtrisés : </strong><br/> HTML5, CSS3, Objective-C, Android
         </li> 
          <li class="skill">
@@ -47,7 +44,7 @@ image   : index
             <div class="image">
                 <div class="image-wrapper"><img src="/img/4.png" /></div>
             </div>
-            <p>Pour qu'un projet soit réussi, il doit être le plus ordonné possible. Il est donc important pour un bon ingénieur de maîtriser les bonnes techniques et les outils permettant d'attribuer au mieux les tâches tout au long du projet et de pouvoir le suivre du début à la fin.</p>
+            <p>Pour qu'un projet soit réussi, il doit être le plus ordonné possible. Il est donc important pour un bon ingénieur de maîtriser les techniques et les outils permettant d'attribuer au mieux les tâches tout au long du projet et de pouvoir le suivre du début à la fin.</p>
              <p><strong>Outils maîtrisés : </strong><br/> Git, Mercurial, SCRUM, Kanban, Gantt, pair coding</p>
         </li> 
     </div>
