--- a/404.html
+++ b/404.html
@@ -27,14 +27,9 @@
                 
                 <nav>
                     <ul>
-                    {% for link in site.navigation %}
-                        {% assign current = nil %}
-                        {% assign currentPage = page.url | remove: 'index.html' %}
-                            {% if currentPage == link.url or page.layout == link.layout %}
-                                {% assign current = 'active' %}
-                            {% endif %}
-                            <li class="{{current}}"><a href="{{ link.url }}">{{ link.text }}</a></li>
-                        {% endfor %}
+                        <li><a href="/">HOME</a></li>
+                        <li><a href="/works/">PROJETS</a></li>
+                        <li><a href="/blog/">BLOG</a></li>
                         <li><a href="mailto:prbaron22@gmail.com">CONTACT</a></li>
                     </ul>
                 </nav>
@@ -52,7 +47,7 @@
     
     <footer>
         <div class="container">
-            <p>2012 - {{ site.time | date: '%Y' }} &copy; Pierre Baron</p>
+            <p>2012 - 2013 &copy; Pierre Baron</p>
             <p>
                 <a href="/credits/">Credits</a>
             </p>
