--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@ keywords : Pierre Baron, Web developer, Mobile Developer, Java, PHP, jQuery, Cak
 
 <section>
     <h2>Compétences</h2>
-    <ul class="skills">
-        <li class="skill">
+    <ul class="list list-skills">
+        <li class="list-item">
             <h3><i class="icon-cogs"></i> Développement back end</h3>
             <div class="image">
                 <div class="image-wrapper"><img src="/img/7.png" /></div>
@@ -24,7 +24,7 @@ keywords : Pierre Baron, Web developer, Mobile Developer, Java, PHP, jQuery, Cak
             <p>Une bonne application se doit d'être mûrement réfléchie et de posséder une base solide. Cela lui permettra de devenir évolutive et de s'adapter aux besoins de vos clients.</p>
             <p><strong>Outils maîtrisés : </strong><br/> PHP, Java, MySQL, MongoDB.</p>
         </li>
-         <li class="skill">
+         <li class="list-item">
             <h3><i class="icon-desktop"></i> Développement front end</h3>
             <div class="image">
                 <div class="image-wrapper"><img src="/img/13.png" /></div>
@@ -32,7 +32,7 @@ keywords : Pierre Baron, Web developer, Mobile Developer, Java, PHP, jQuery, Cak
             <p>A mon sens, il est aussi important d'avoir une application fonctionelle que belle et ergonomique. L'interface et les interactions homme-machine, sont les éléments qui permettront à vos clients de juger et d'apprécier votre application.</p>
             <p><strong>Outils maîtrisés : </strong><br/> HTML5, CSS3, JavaScript.</p>
         </li> 
-         <li class="skill">
+         <li class="list-item">
             <h3><i class="icon-mobile-phone"></i> Développement mobile</h3>
             <div class="image">
                 <div class="image-wrapper"><img src="/img/14.png" /></div>
@@ -40,7 +40,7 @@ keywords : Pierre Baron, Web developer, Mobile Developer, Java, PHP, jQuery, Cak
             <p>Les applications mobiles webs ou natives sont une part intégrante du web actuel. Il est ainsi nécessaire de pouvoir proposer à vos clients une application intuitive et adaptée aux plus grand nombre d'appareils. </p>
              <p><strong>Outils maîtrisés : </strong><br/> HTML5, CSS3, Objective-C, Android
         </li> 
-         <li class="skill">
+         <li class="list-item">
             <h3><i class="icon-dashboard"></i> Gestion de projet</h3>
             <div class="image">
                 <div class="image-wrapper"><img src="/img/4.png" /></div>
@@ -48,6 +48,6 @@ keywords : Pierre Baron, Web developer, Mobile Developer, Java, PHP, jQuery, Cak
             <p>Pour qu'un projet soit réussi, il doit être le plus ordonné possible. Il est donc important pour un bon ingénieur de maîtriser les techniques et les outils permettant d'attribuer au mieux les tâches tout au long du projet et de pouvoir le suivre du début à la fin.</p>
              <p><strong>Outils maîtrisés : </strong><br/> Git, Mercurial, SCRUM, Kanban, Gantt, pair coding</p>
         </li> 
-    </div>
+    </ul>
 </section>
 
