--- a/contact/index.html
+++ b/contact/index.html
@@ -16,7 +16,7 @@ keywords : Pierre Baron, Web developer, Mobile Developer, Java, PHP, jQuery, Cak
     <li id="foli17" class="notranslate">
         <label class="desc" id="title17" for="Field17">Email</label>
         <div>
-            <input id="Field17" name="Field17" type="email" spellcheck="false" class="field text medium" value="" maxlength="255" tabindex="2" required/> 
+            <input id="Field17" name="Field17" type="email" spellcheck="false" class="field text medium" value="" maxlength="255" tabindex="2" required/>
         </div>
     </li>
     <li id="foli20" class="notranslate">
@@ -27,7 +27,7 @@ keywords : Pierre Baron, Web developer, Mobile Developer, Java, PHP, jQuery, Cak
     </li>
     <li class="buttons ">
         <div>
-            <input id="saveForm" name="saveForm" class="btTxt submit btn" type="submit" value="Envoyer"/>
+            <input id="saveForm" name="saveForm" class="btTxt submit btn btn-primary" type="submit" value="Envoyer"/>
         </div>
     </li>
     <li class="hide">
@@ -36,4 +36,4 @@ keywords : Pierre Baron, Web developer, Mobile Developer, Java, PHP, jQuery, Cak
         <input type="hidden" id="idstamp" name="idstamp" value="r0cN0lyg1ffgxD/MsEiFeFk7ckfxkBWXW4XZfjRhkIA=" />
     </li>
 </ul>
-</form> 
+</form>
