maj class pour formulaires

--- a/contact/index.html
+++ b/contact/index.html
@@ -5,7 +5,7 @@ tagline  : Contact
 keywords : Pierre Baron, Web developer, Mobile Developer, Java, PHP, jQuery, CakePHP, jQuery
 ---
 
-<form id="form1" name="form1" class="wufoo rightLabel page" autocomplete="off" enctype="multipart/form-data" method="post" action="https://prbaron.wufoo.com/forms/z1eyes6h0bn28ys/#public">
+<form id="form1" name="form1" class="wufoo rightLabel page form" autocomplete="off" enctype="multipart/form-data" method="post" action="https://prbaron.wufoo.com/forms/z1eyes6h0bn28ys/#public">
 <ul>
     <li id="foli18" class="notranslate">
         <label class="desc" id="title18" for="Field18">Nom</label>
