première intégration de SOLID. (wip)

--- a/index.html
+++ b/index.html
@@ -7,47 +7,110 @@ keywords : Pierre Baron, Web developer, Mobile Developer, Java, PHP, jQuery, Cak
 
 <section>
     <h2>A propos de moi</h2>
+
     <div class="grid12">
-         <p>Bonjour, je m'appelle Pierre Baron et je suis ingénieur informaticien spécialisé en domotique et services à l'habitat. Je travaille actuellement en tant que développeur web pour <a href="http://www.alyacom.fr/">AlyaCom</a>.</p>
-         <p>Après avoir réalisé un IUT en Génie Electrique et Informatique Industrielle, j'ai décidé de m'orienter vers une école d'ingénieur spécialisée en informatique, l'<a href="https://esir.univ-rennes1.fr/">ESIR</a>. J'ai choisi l'option domotique et services à l'habitat car elle me permettrait de travailler sur divers systèmes et met en oeuvre un panel de compétences plutôt large, allant de la programmation objet, l'automatisme, les réseaux ou la sécurité.</p>
+        <p>Bonjour, je m'appelle Pierre Baron et je suis ingénieur informaticien spécialisé en domotique et services à
+            l'habitat. Je travaille actuellement en tant que développeur web pour <a href="http://www.alyacom.fr/">AlyaCom</a>.
+        </p>
+
+        <p>Après avoir réalisé un IUT en Génie Electrique et Informatique Industrielle, j'ai décidé de m'orienter vers
+            une école d'ingénieur spécialisée en informatique, l'<a href="https://esir.univ-rennes1.fr/">ESIR</a>. J'ai
+            choisi l'option domotique et services à l'habitat car elle me permettrait de travailler sur divers systèmes
+            et met en oeuvre un panel de compétences plutôt large, allant de la programmation objet, l'automatisme, les
+            réseaux ou la sécurité.</p>
     </div>
 </section>
 
+<div id="service">
+    <div class="container">
+        <div class="row centered">
+            <div class="col-md-4">
+                <i class="fa fa-gears"></i>
+                <h4>Développement back end</h4>
+
+                <p>Une bonne application se doit d'être mûrement réfléchie et de posséder une base solide. Cela lui
+                    permettra de devenir évolutive et de s'adapter aux besoins de vos clients.</p>
+
+                <p><strong>Outils maîtrisés : </strong><br/> PHP, Java, MySQL, MongoDB.</p>
+            </div>
+            <div class="col-md-4">
+                <i class="fa fa-desktop"></i>
+                <i class="fa fa-tablet"></i>
+                <i class="fa fa-mobile"></i>
+
+                <h4>Développement front end / mobile</h4>
+
+                <p>A mon sens, il est aussi important d'avoir une application fonctionelle que belle et ergonomique.
+                    L'interface et les interactions homme-machine, sont les éléments qui permettront à vos clients de
+                    juger
+                    et d'apprécier votre application.</p>
+
+                <p><strong>Outils maîtrisés : </strong><br/> HTML5, CSS3, JavaScript,Objective-C, Android.</p>
+            </div>
+            <div class="col-md-4">
+                <i class="fa fa-dashboard"></i>
+                <h4>Gestion de projet</h4>
+
+                <p>Pour qu'un projet soit réussi, il doit être le plus ordonné possible. Il est donc important pour un bon
+                ingénieur de maîtriser les techniques et les outils permettant d'attribuer au mieux les tâches tout au
+                long du projet et de pouvoir le suivre du début à la fin.</p>
+
+            <p><strong>Outils maîtrisés : </strong><br/> Git, Mercurial, SCRUM, Kanban, Gantt, pair coding</p>
+            </div>
+        </div>
+    </div>
+    <! --/container -->
+</div><! --/service -->
 <section>
     <h2>Compétences</h2>
     <ul class="list list-skills">
         <li class="list-item">
             <h3><i class="icon-cogs"></i> Développement back end</h3>
+
             <div class="image">
-                <div class="image-wrapper"><img src="/img/7.png" /></div>
+                <div class="image-wrapper"><img src="/img/7.png"/></div>
             </div>
-            <p>Une bonne application se doit d'être mûrement réfléchie et de posséder une base solide. Cela lui permettra de devenir évolutive et de s'adapter aux besoins de vos clients.</p>
+            <p>Une bonne application se doit d'être mûrement réfléchie et de posséder une base solide. Cela lui
+                permettra de devenir évolutive et de s'adapter aux besoins de vos clients.</p>
+
             <p><strong>Outils maîtrisés : </strong><br/> PHP, Java, MySQL, MongoDB.</p>
         </li>
-         <li class="list-item">
+        <li class="list-item">
             <h3><i class="icon-desktop"></i> Développement front end</h3>
+
             <div class="image">
-                <div class="image-wrapper"><img src="/img/13.png" /></div>
+                <div class="image-wrapper"><img src="/img/13.png"/></div>
             </div>
-            <p>A mon sens, il est aussi important d'avoir une application fonctionelle que belle et ergonomique. L'interface et les interactions homme-machine, sont les éléments qui permettront à vos clients de juger et d'apprécier votre application.</p>
+            <p>A mon sens, il est aussi important d'avoir une application fonctionelle que belle et ergonomique.
+                L'interface et les interactions homme-machine, sont les éléments qui permettront à vos clients de juger
+                et d'apprécier votre application.</p>
+
             <p><strong>Outils maîtrisés : </strong><br/> HTML5, CSS3, JavaScript.</p>
-        </li> 
-         <li class="list-item">
+        </li>
+        <li class="list-item">
             <h3><i class="icon-mobile-phone"></i> Développement mobile</h3>
+
             <div class="image">
-                <div class="image-wrapper"><img src="/img/14.png" /></div>
+                <div class="image-wrapper"><img src="/img/14.png"/></div>
             </div>
-            <p>Les applications mobiles webs ou natives sont une part intégrante du web actuel. Il est ainsi nécessaire de pouvoir proposer à vos clients une application intuitive et adaptée aux plus grand nombre d'appareils. </p>
-             <p><strong>Outils maîtrisés : </strong><br/> HTML5, CSS3, Objective-C, Android
-        </li> 
-         <li class="list-item">
+            <p>Les applications mobiles webs ou natives sont une part intégrante du web actuel. Il est ainsi nécessaire
+                de pouvoir proposer à vos clients une application intuitive et adaptée aux plus grand nombre
+                d'appareils. </p>
+
+            <p><strong>Outils maîtrisés : </strong><br/> HTML5, CSS3, Objective-C, Android
+        </li>
+        <li class="list-item">
             <h3><i class="icon-dashboard"></i> Gestion de projet</h3>
+
             <div class="image">
-                <div class="image-wrapper"><img src="/img/4.png" /></div>
+                <div class="image-wrapper"><img src="/img/4.png"/></div>
             </div>
-            <p>Pour qu'un projet soit réussi, il doit être le plus ordonné possible. Il est donc important pour un bon ingénieur de maîtriser les techniques et les outils permettant d'attribuer au mieux les tâches tout au long du projet et de pouvoir le suivre du début à la fin.</p>
-             <p><strong>Outils maîtrisés : </strong><br/> Git, Mercurial, SCRUM, Kanban, Gantt, pair coding</p>
-        </li> 
+            <p>Pour qu'un projet soit réussi, il doit être le plus ordonné possible. Il est donc important pour un bon
+                ingénieur de maîtriser les techniques et les outils permettant d'attribuer au mieux les tâches tout au
+                long du projet et de pouvoir le suivre du début à la fin.</p>
+
+            <p><strong>Outils maîtrisés : </strong><br/> Git, Mercurial, SCRUM, Kanban, Gantt, pair coding</p>
+        </li>
     </ul>
 </section>
 
