intégration de SOLID. (wip)

--- a/contact/index.html
+++ b/contact/index.html
@@ -4,36 +4,40 @@ title    : Ingénieur web & mobile
 tagline  : Contact
 keywords : Pierre Baron, Web developer, Mobile Developer, Java, PHP, jQuery, CakePHP, jQuery
 ---
+<div class="row">
+    <div class="col-lg-6 col-md-8">
+        <h4>Restons en contact !</h4>
 
-<form id="form1" name="form1" class="wufoo rightLabel page form" autocomplete="off" enctype="multipart/form-data" method="post" action="https://prbaron.wufoo.com/forms/z1eyes6h0bn28ys/#public">
-<ul>
-    <li id="foli18" class="notranslate">
-        <label class="desc" id="title18" for="Field18">Nom</label>
-        <div>
-            <input id="Field18" name="Field18" type="text" class="field text medium" value="" maxlength="255" tabindex="1" required/>
-        </div>
-    </li>
-    <li id="foli17" class="notranslate">
-        <label class="desc" id="title17" for="Field17">Email</label>
-        <div>
-            <input id="Field17" name="Field17" type="email" spellcheck="false" class="field text medium" value="" maxlength="255" tabindex="2" required/>
-        </div>
-    </li>
-    <li id="foli20" class="notranslate">
-        <label class="desc" id="title20" for="Field20">Message</label>
-        <div>
-            <textarea id="Field20" name="Field20" class="field textarea medium" spellcheck="true" tabindex="3" required></textarea>
-        </div>
-    </li>
-    <li class="buttons ">
-        <div>
-            <input id="saveForm" name="saveForm" class="btTxt submit btn btn-primary" type="submit" value="Envoyer"/>
-        </div>
-    </li>
-    <li class="hide">
-        <label for="comment">Do Not Fill This Out</label>
-        <textarea name="comment" id="comment" rows="1" cols="1"></textarea>
-        <input type="hidden" id="idstamp" name="idstamp" value="r0cN0lyg1ffgxD/MsEiFeFk7ckfxkBWXW4XZfjRhkIA=" />
-    </li>
-</ul>
-</form>
+        <div class="hline"></div>
+        <form id="form1" name="form1" class="wufoo" autocomplete="off" enctype="multipart/form-data" method="post" action="https://prbaron.wufoo.com/forms/z1eyes6h0bn28ys/#public">
+            <div class="form-group">
+                <label for="" class="control-label">Nom</label>
+                <input id="Field18" name="Field18" type="text" class="form-control" value="" maxlength="255" tabindex="1" required />
+            </div>
+            <!-- .form-group -->
+
+            <div class="form-group">
+                <label for="" class="control-label">Email</label>
+                <input id="Field17" name="Field17" type="email" spellcheck="false" class="form-control" value="" maxlength="255" tabindex="2" required />
+            </div>
+            <!-- .form-group -->
+
+            <div class="form-group">
+                <label for="" class="control-label">Message</label>
+                <textarea id="Field20" name="Field20" class="form-control" spellcheck="true" tabindex="3" required></textarea>
+            </div>
+            <!-- .form-group -->
+
+            <div class="form-group">
+                <input id="saveForm" name="saveForm" class="submit btn btn-primary" type="submit" value="Envoyer" />
+            </div>
+            <!-- .form-group -->
+
+            <div class="hidden">
+                <label for="comment">Do Not Fill This Out</label>
+                <textarea name="comment" id="comment" rows="1" cols="1"></textarea>
+                <input type="hidden" id="idstamp" name="idstamp" value="r0cN0lyg1ffgxD/MsEiFeFk7ckfxkBWXW4XZfjRhkIA=" />
+            </div>
+        </form>
+    </div>
+</div>
